# genro-api

./: CLAUDE.md  README.md  pyproject.toml
docs/: NICEGUI_GUIDELINES.md  NICEGUI_REFERENCE.md  PUBLISHER_ARCHITECTURE.md
examples/: README.md  __init__.py  library_example.py  library_server.py
genro_api/: __init__.py  config.py  publisher.py
genro_api/decorators/: __init__.py
gtext_src/: architecture.md.gtext  overview.md.gtext  subproject_hdr.md
tests/: __init__.py  test_apiready.py  test_publisher.py  test_publisher_endpoints.py
tests/fixtures/: library.py
