[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genro-api"
version = "0.1.0"
description = "API utilities and FastAPI integration for Genro framework"
authors = [{name = "Genropy Team"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["genro", "api", "fastapi", "rest", "openapi", "swagger"]

dependencies = [
    "genro-core>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "nicegui>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "httpx>=0.24.0",  # For FastAPI testing
]

[project.urls]
Homepage = "https://github.com/genropy/genro-api"
Repository = "https://github.com/genropy/genro-api"
Issues = "https://github.com/genropy/genro-api/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["genro_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=genro_api --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N"]
